# mpellon-superpowers

plugins/claude-workbench/: .gitignore  CLAUDE.md  LICENSE  README.md
plugins/claude-workbench/.claude-plugin/: manifest.json
plugins/claude-workbench/commands/: accessibility-audit.md  analyze-issue.md  commit.md  create-pr.md  plan.md  rename-branch.md  review-script.md  session-summary.md  worktree.md
plugins/claude-workbench/mcp-servers/: serena.md
plugins/claude-workbench/skills/brainstorming/: SKILL.md  examples.md
plugins/claude-workbench/skills/browsing/: README.md  SKILL.md  examples.md
plugins/claude-workbench/skills/codebase-analysis/: SKILL.md
plugins/claude-workbench/skills/creating-skills/: SKILL.md
plugins/claude-workbench/skills/data-visualization/: SKILL.md  d3-patterns.md
plugins/claude-workbench/skills/executing-plans/: SKILL.md
plugins/claude-workbench/skills/javascript-typescript/: SKILL.md
plugins/claude-workbench/skills/pdf/: README.md  SKILL.md  examples.md  pyproject.toml  requirements.txt
plugins/claude-workbench/skills/pdf/scripts/: pdf_operations.py
plugins/claude-workbench/skills/pdf/tests/: test_pdf_basic_operations.py
plugins/claude-workbench/skills/python-development/: SKILL.md
plugins/claude-workbench/skills/quick-descriptive-stats/: README.md  SKILL.md  analyze.py  examples.md  pyproject.toml  reference.md  requirements.txt
plugins/claude-workbench/skills/quick-descriptive-stats/tests/: test_data_quality.py  test_integration.py  test_loading.py  test_statistics.py
plugins/claude-workbench/skills/quick-descriptive-stats/tests/fixtures/: categorical_only.csv  missing_values.csv  numeric_only.csv  valid_sales.csv
plugins/claude-workbench/skills/remembering-conversations/: SKILL.md
plugins/claude-workbench/skills/semantic-refactoring/: SKILL.md
plugins/claude-workbench/skills/seo-expert/: SKILL.md
plugins/claude-workbench/skills/shell-scripting/: SKILL.md  patterns.md
plugins/claude-workbench/skills/simplifying-control-flow/: SKILL.md
plugins/claude-workbench/skills/sql-db-design/: SKILL.md
plugins/claude-workbench/skills/sql-optimization/: SKILL.md
plugins/claude-workbench/skills/test-driven-development/: SKILL.md  examples.md  reference.md
plugins/claude-workbench/skills/xlsx/: README.md  SKILL.md  examples.md  pyproject.toml  requirements.txt
plugins/claude-workbench/skills/xlsx/scripts/: xlsx_operations.py
plugins/claude-workbench/skills/xlsx/tests/: test_xlsx_basic_operations.py
(+8 files in other folders)
