[project]
name = "pdf-skill"
version = "1.0.0"
description = "Comprehensive PDF manipulation toolkit"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=5.0.0",
    "pdfplumber>=0.10.0",
    "reportlab>=4.0.0",
    "pdf2image>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (moderate speed)",
    "e2e: End-to-end tests (slower, full workflow)",
]
